# backT

./: .gitignore  ALLOW_SHORT_CHANGES.md  BACKFILLING_ALGORITHM.md  BACKTESTING_RESEARCH_AND_GAPS.md  BACKTEST_ENGINE_NUMBA_OPTIMIZATION.md  BOOKS_FEATURE.md  BOOKS_QUICK_START.md  BOOKS_SYMBOL_EDITING.md  BOOK_EDITOR_GUIDE.md  CLAUDE.md  CORRELATION_EXCLUSION_FEATURE.md  CPCV_PERFORMANCE_FIX.md  CPCV_PERFORMANCE_OPTIMIZATIONS.md  DATABASE_USAGE.md  DEVELOPMENT_GUIDELINES.md  FMP_SETUP.md  LAUNCH_TROUBLESHOOTING.md  MANIFEST.in  ML_MEAN_REVERSION_RESEARCH.md  PARAMETER_OPTIMIZATION_RESEARCH.md  PHASE1_CACHING_COMPLETE.md  README.md  SETUP_STREAMLIT.bat  STREAMLIT_BOOK_MANAGER.md  STREAMLIT_CACHING_OPTIMIZATION.md  STREAMLIT_README.md  STREAMLIT_REORGANIZATION.md  TESTING_REQUIREMENTS.md  compare_trades.py  diagnose_data.py  diagnose_kalman_basket.py  diagnose_kalman_detailed.py  diagnose_rsi_momentum.py  diagnose_signals.py  download_market_data.py  edit_book.py  launch_book_manager.bat  launch_streamlit.bat  launch_streamlit.py  pyproject.toml  (+18 more)
backt/: __init__.py
backt/api/: __init__.py  cli.py  streamlit_interface.py
backt/data/: __init__.py  cache.py  fundamentals.py  loaders.py  market_data_db.py  mock_data.py  normalizer.py  sqlite_loader.py
backt/engine/: __init__.py  backtester.py
backt/execution/: __init__.py  execution_interface.py  mock_execution.py
backt/optimization/: __init__.py  flaml_optimizer.py  optimizer.py  results.py
backt/portfolio/: __init__.py  portfolio_manager.py  position_manager.py
backt/reporting/: __init__.py  performance_report.py  report_generator.py  trade_logger.py  visualization.py
backt/risk/: __init__.py  metrics.py  numba_metrics.py  risk_calculator.py
backt/signal/: __init__.py  indicators.py  kalman.py  strategy_helpers.py
backt/utils/: __init__.py  book_editor.py  books.py  config.py  constants.py  data_splits.py  logging_config.py  types.py
backt/validation/: __init__.py  cpcv_validator.py  overfitting.py  parameter_grid.py
docs/: CPCV_IMPLEMENTATION_PLAN.md  CPCV_USER_GUIDE.md  kalman_filter_strategies_proposal.md  per_symbol_correlation_methodology.md  risk_management_fixes.md  risk_management_system.md
examples/: advanced_strategy.py  buy_and_hold.py  cpcv_validation_demo.py  mock_data_example.py  reliable_universe_test.py  robust_strategy.py  simple_strategy.py  template_universe_run.py  test_framework.py  test_simple.py  validate_mock_system.py  working_example.py
notebooks/: BackT_Tutorial_Buy_Hold.ipynb  BackT_Tutorial_Long_Short-detailed.ipynb  BackT_Tutorial_Long_Short.ipynb  BackT_Tutorial_Mock_Data.ipynb  Example_Performance_Reporting.ipynb  Kalman_MA_Crossover_Strategy.ipynb  Per_Symbol_Performance_Example.ipynb  Strategy_Library_Example.ipynb  Strategy_Optimization_Example.ipynb
saved_books/: Kalman_Top10_2Yrs.json  MACD_Diversified_2024.json  MACD_Top5_2024.json  Test_Momentum_Strategy.json  bollingMRev-2011202510-top10-sortino-exCor75-up.json  bollingMRev-2011202510-top10-sortino-exCor75.json  kalmanMACrossLO-2011202510-top10-sortino-exCor75.json  kalmanMACrossLS-2011202510-top10-sortino-exCor75-up.json  kalmanMACrossLS-2011202510-top10-sortino-exCor75.json  macd-2011202510-top10-sortino-diversified-10.json  macd-2011202510-top10-sortino-diversified.json  macd-2011202510-top10-sortino.json  rsiMrev-2011202510-top10-sortino-exCor75-up.json
saved_books/_backups/: MACD_Top5_2024_20251115_174144.json  MACD_Top5_2024_20251115_174234.json  MACD_Top5_2024_20251115_174323.json
strategies/: README.md  __init__.py  aqr.py  benchmark.py  momentum.py
streamlit_apps/: README.md  streamlit_app.py  streamlit_backtest_runner.py  streamlit_backtest_runner_cpcv.py  streamlit_book_manager.py  test_imports.py
test_scripts/: README.md
tests/: __init__.py  test_config.py  test_data_loaders.py  test_portfolio.py  test_validation.py
