[metadata]
name = backt
version = 0.1.0
author = BackT Development Team
author_email = dev@backt.com
description = A professional trading backtesting framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/backt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.3.0
    numpy>=1.20.0
    scipy>=1.7.0
    matplotlib>=3.4.0
    seaborn>=0.11.0
    yfinance>=0.1.70

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=21.0
    flake8>=3.9
    mypy>=0.910
    pre-commit>=2.15
jupyter =
    jupyter>=1.0
    ipykernel>=6.0
    notebook>=6.4
web =
    streamlit>=1.0
    plotly>=5.0
advanced =
    numba>=0.56
    scikit-learn>=1.0
    statsmodels>=0.13
data =
    quandl>=3.7
    alpha-vantage>=2.3
    pandas-datareader>=0.10

[options.entry_points]
console_scripts =
    backt = backt.api.cli:BacktestCLI.run_backtest

[options.packages.find]
exclude =
    tests*
    examples*